added aditional style

--- a/html/index.html
+++ b/html/index.html
@@ -9,13 +9,13 @@
 <body style="height: 100%; min-height: 100%; margin: 0; padding: 0;">
     <div style="height: 100%; width: 100%; display: table;">
         <div style="display: table-cell; vertical-align: middle;">
-            <div style="width: 500px; height: auto; border: 2px solid #aaa; border-radius: 3px; text-align: center; margin: 0 auto; display: table">
-                <div style="display: table-cell; vertical-align: middle; padding: 5px">
-                    <h1 style="font-weight: 300; font-family: monospace;">Natural Language Classifier</h1>
-                    <span><input style="width: 50%;" type="text" name="command" placeholder="Enter a command..."><button style="width: auto;" type="submit">Submit </button></span>
-                    <hr style="margin: 25px 5px"/>
-                    <p style="color: #aaa; font-family: monospace; text-align: left; padding: 5px;">This is a Natural Language Processor (NPL). It works by taking in a string of natural language and then uses trained classifiers to disect the string and convert it to a command that the computer can understand. Using this command, the computer then responds to the string.</p>
-                    <p style="color: #ddd; font-family: monospace;">Tyler Carpenter | 2018</p>
+            <div style="width: 500px; height: auto; border: 2px solid #aaa; border-radius: 3px; text-align: center; margin: 0 auto; display: table; box-shadow: 5px 5px 10px #888">
+                    <div style="display: table-cell; vertical-align: middle; padding: 5px">
+                        <h1 style="font-weight: 300; font-family: monospace;">Natural Language Classifier</h1>
+                        <span><input style="width: 50%;" type="text" name="command" placeholder="Enter a command..."><button style="width: auto;" type="submit">Submit </button></span>
+                        <hr style="margin: 25px 5px"/>
+                        <p style="color: #aaa; font-family: monospace; text-align: left; padding: 5px;">This is a Natural Language Processor (NPL). It works by taking in a string of natural language and then uses trained classifiers to disect the string and convert it to a command that the computer can understand. Using this command, the computer then responds to the string.</p>
+                        <p style="color: #ddd; font-family: monospace;">Tyler Carpenter | 2018</p>
                 </div>
             </div>
         </div>
