--- a/html/index.html
+++ b/html/index.html
@@ -9,16 +9,22 @@
 </head>
 
 <body style="height: 100%; min-height: 100%; margin: 0; padding: 0;">
+
     <div style="height: 100%; width: 100%; display: table;">
         <div style="display: table-cell; vertical-align: middle;">
             <div style="width: 500px; height: auto; border: 2px solid #aaa; border-radius: 3px; text-align: center; margin: 0 auto; display: table; box-shadow: 5px 5px 10px #888">
                 <div style="display: table-cell; vertical-align: middle; padding: 5px">
                     <h1 style="font-weight: 300; font-family: monospace;">Natural Language Classifier</h1>
-                    <span>
-                        <input style="width: 50%;" type="text" name="command" placeholder="Enter a command...">
-                        <button style="width: auto;" type="submit">Submit </button>
-                    </span>
-                    <hr style="margin: 25px 5px" />
+                    <div style="width: 100%; height: 25px;">
+                        <form id="command_submit" style="float: left; width: 85%">
+                            <input style="width: 75%;" type="text" id="command" placeholder="Enter a command..." autofocus>
+                            <input style="width: auto;" type="submit" id="submit" value="Submit">
+                        </form>
+                        <form id="clear-console" style="float: left; width: 10%" action="./index.html">
+                            <input style="width: 100%" type="submit" value="Reset">
+                        </form>
+                    </div>
+                    <hr style="margin: 20px 5px" />
                     <p style="color: #aaa; font-family: monospace; text-align: left; padding: 5px;">This is a Natural Language Processor (NPL). It works by taking in a string of natural language and then
                         uses trained classifiers to disect the string and convert it to a command that the computer can understand.
                         Using this command, the computer then responds to the string.</p>
@@ -28,13 +34,46 @@
         </div>
     </div>
 
-    <!-- Include Sources -->
+    <!-- Include scripts -->
+    <script type="text/javascript">
+        window.onload = function () {
+
+            console.log("=== New Session ===");
+
+            // Initialize an empty variable
+            var input_box;
+            var command_submit;
+            var command = "";
+
+            // Set input box
+            input_box = document.getElementById('command');
+
+            // Set form
+            command_submit = document.getElementById('command_submit');
+
+            // Add an on submit event listener to pring the value of the input box
+            command_submit.addEventListener('submit', function (e) {
+                e.preventDefault()
+
+                // Set the command to the input box value
+                if (input_box.value === "") {
+                    command = "<Empty>";
+                } else {
+                    command = input_box.value;
+                }
+
+                // Print the command
+                console.log("Command: " + command);
+
+                // Empty the input box
+                input_box.value = "";
+            });
+        }
+    </script>
 
     <!--  -->
-    <source src="">
-
-    <!--  -->
-    <source src="">
+    <script src=""></script>
 </body>
+
 
 </html>
